# OcuBea

./: .gitignore  API.md  BUILD_APK.md  NAMES.md  README.md  autostartup.md  buildozer.spec  copilot-session-9eea163f-8682-441a-9566-14027a47dbe7.md  gradle.properties  main.py  plan.md  pyproject.toml  settings.gradle.kts
.github/workflows/: build-apk.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ocubea/: MainActivity.kt  OcuBeaApplication.kt
app/src/main/java/com/ocubea/camera/: CameraManager.kt  TorchController.kt
app/src/main/java/com/ocubea/model/: CameraConfig.kt
app/src/main/java/com/ocubea/server/: StreamServer.kt
app/src/main/java/com/ocubea/stream/: VideoEncoder.kt
app/src/main/res/assets/: index.html
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-mdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
docs/: PLAN.md
src/: README.md  kivy_app.py  main.py  sitecustomize.py
src/api/: config.py  endpoints.py
src/capture/: __init__.py  android_camera.py  backend.py  ffmpeg_capture.py  v4l2.py
src/core/: settings.py
src/encode/: __init__.py  engine.py  pipeline.py
src/stream/: __init__.py  distributor.py  mjpeg.py  multi_viewer.py  server.py
src/ui/: index.html  style.css
src/ui/static/: app.js  feed.js
